Updated hero content

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Responsive App Landing Page">
-		<meta name="keywords" content="">
-		<meta name="author" content="Themehexa">
+		<meta name="description" content="Rochester Xamarin Consulting">
+		<meta name="keywords" content="Xamarin Consulting Mobile App Development Software">
+		<meta name="author" content="Hoefling Software">
 
-		<title>AppCore - Responsive App Landing Page</title>
+		<title>Rochester Xamarin Consulting</title>
 
 		<!-- Favicon -->
 		<link href="assets/img/favicon.ico" rel="icon" type="image/x-icon">		
@@ -54,16 +54,17 @@
 						<div class="container">						
 							<div class="row text-center">								
 								<div class="col-md-12">
-									<h1>AppCore<span class="dot">.</span></h1>
+									<h1>Rochester Xamarin<span class="dot">.</span></h1>
 								</div>	
 							</div>
 
 							<div class="row">
 								<div class="col-md-12 text-center">
 									<ul id="intro">
-										<li><h2>Modern, responsive and clean</h2></li>
-										<li><h2>Landing page to describe your app</h2></li>
-										<li><h2>Scroll to explore the features!</h2></li>
+										<li><h2>Mobile App Development</h2></li>
+										<li><h2>iOS | Android | Windows</h2></li>
+                                        <li><h2>Enterprise Mobile Software</h2></li>
+                                        <li><h2>Cloud Solutions</h2></li>
 									</ul>
 								</div>
 							</div>	
