Added process section

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 		            		<a class="page-scroll" href="#page-top">Home</a>
 		            	</li>	
 		              	<li>
-		                	<a class="page-scroll" href="#features">Features</a>
+		                	<a class="page-scroll" href="#process">Process</a>
 		              	</li>
 		              	<li>
 		                	<a class="page-scroll" href="#screenshots">Screenshots</a>
@@ -197,12 +197,12 @@
 		</section>
 		<!-- End Services -->	
 
-		<!-- Features -->
-		<section id="features">
+		<!-- Process -->
+		<section id="process">
 			<div class="container">
 				<div class="row text-center">
 					<div class="col-md-12">
-					 	<h2 class="headline wow fadeInDown">About Core<span class="dot">.</span></h2>
+					 	<h2 class="headline wow fadeInDown">Process<span class="dot">.</span></h2>
 					 	<div class="custom-style"><span class="ti-info-alt"></span></div>				
 					</div>
 				</div>
@@ -213,23 +213,23 @@
 					</div>
 					<div class="col-md-7">
 						<div class="features">
-							<h3 class="wow fadeInDown"><span class="common-icon-style ti-light-bulb"></span>Boosts Interest</h3>
-							<p class="wow fadeIn">AppCore gives you an easy way to showcase your products or services to your customers and prospective customers.</p>
+							<h3 class="wow fadeInDown"><span class="common-icon-style ti-light-bulb"></span>Design</h3>
+							<p class="wow fadeIn">Rochester Xamarin Consulting works with each client as they design their new app. Mobile app design is an iterative process where the design team listens to what the clients needs until there is a working prototype.</p>
 						</div>	
 
 						<div class="features">
-							<h3 class="wow fadeInDown"><span class="common-icon-style ti-thumb-up"></span>Enhances Engagement</h3>
-							<p class="wow fadeIn">Most shoppers can't resist the temptation of a good deal or a great discount. And this is exactly what you can do with AppCore.</p>
+							<h3 class="wow fadeInDown"><span class="common-icon-style ti-thumb-up"></span>Development</h3>
+							<p class="wow fadeIn">Demos will be provided on a weekly or bi-weekly basis, which keeps the client informed of how features are implemented. This gives the client an opportunity to provide critical feedback as the team goes through their iterative development cycles.</p>
 						</div>		
 
 						<div class="features">
-							<h3 class="wow fadeInDown"><span class="common-icon-style ti-announcement"></span>Aids Promotion</h3>
-							<p class="wow fadeIn">Create an offer that is simply too irresistible and notify about it through AppCore. An easy way to promote your business.</p>
+							<h3 class="wow fadeInDown"><span class="common-icon-style ti-announcement"></span>Release</h3>
+							<p class="wow fadeIn">All deployments to the various mobile stores is handled in house which is one less thing for you to worry about. Automated 1-click deploys make it easy to update the app and get pre-release builds in your hands faster.</p>
 						</div>		
 
 						<div class="features">
-							<h3 class="wow fadeInDown"><span class="common-icon-style ti-pulse"></span>Ensures Ease</h3>
-							<p class="wow fadeIn">Users today wish for a fuss-free experience. With a good plan and clear vision, AppCore deliver on their expectations.</p>
+							<h3 class="wow fadeInDown"><span class="common-icon-style ti-pulse"></span>Support</h3>
+							<p class="wow fadeIn">When issues arrise, our support team will be standing by to provide you with assistance.</p>
 						</div>	
 					</div>
 
