Updated assets and hero content

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		              <span class="icon-bar"></span>
 		            </button>
 		            <!-- Brand -->
-		            <a class="navbar-brand page-scroll logo" href="#page-top">AppCore<span class="dot">.</span></a>
+		            <a class="navbar-brand page-scroll logo" href="#page-top">Rochester Xamarin<span class="dot">.</span></a>
 		            <!-- End Brand -->
 		          </div>
 		          <div class="collapse navbar-collapse">
@@ -163,24 +163,24 @@
 					<div class="col-md-3 col-sm-6 text-center wow fadeIn" data-wow-duration="1s" data-wow-delay=".3s">
 						<div class="services">							
 							<span class="services-icon-style ti-heart"></span>
-							<h3>Awesome Design</h3>
-							<p>For one page website.</p>		
+							<h3>Personal Attention</h3>
+							<p>Every client gets one on one attention.</p>		
 							<div class="divider center-block"></div>					
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6 text-center wow fadeIn" data-wow-duration="1s" data-wow-delay=".5s">
 						<div class="services">							
 							<span class="services-icon-style ti-mobile"></span>
-							<h3>Responsive Layout</h3>
-							<p>Mobile, tablet &amp; desktop.</p>
+							<h3>Device Agnostic</h3>
+							<p>Any device, any platform!</p>
 							<div class="divider center-block"></div>					
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6 text-center wow fadeIn" data-wow-duration="1s" data-wow-delay=".7s">
 						<div class="services">							
 							<span class="services-icon-style ti-pencil-alt"></span>
-							<h3>Clean Coding</h3>
-							<p>Perfect indexing, easily customize.</p>
+							<h3>Enterprise Code</h3>
+							<p>Perfect code, every time.</p>
 							<div class="divider center-block"></div>					
 						</div>
 					</div>
@@ -188,7 +188,7 @@
 						<div class="services">							
 							<span class="services-icon-style ti-support"></span>
 							<h3>Great Support</h3>
-							<p>Fully documented, 24/7 support.</p>
+							<p>Post Release bug? We will take care of it.</p>
 							<div class="divider center-block"></div>					
 						</div>
 					</div>
@@ -229,7 +229,7 @@
 
 						<div class="features">
 							<h3 class="wow fadeInDown"><span class="common-icon-style ti-pulse"></span>Support</h3>
-							<p class="wow fadeIn">When issues arrise, our support team will be standing by to provide you with assistance.</p>
+							<p class="wow fadeIn">When issues arise, our support team will be standing by to provide you with assistance. The customer portal provides enterprise level support for any size of application.</p>
 						</div>	
 					</div>
 
@@ -238,30 +238,30 @@
 		</section>
 		<!-- End Features -->
 
-		<!-- More Features -->
-		<section id="more">
+		<!-- Capabilities Features -->
+		<section id="capabilities">
 			<div class="container">
 				<div class="row text-center">
 					<div class="col-md-12">
-					 	<h2 class="headline wow fadeInDown">Awesome Features<span class="dot">.</span></h2>
+					 	<h2 class="headline wow fadeInDown">Capabilities<span class="dot">.</span></h2>
 					 	<div class="custom-style"><span class="ti-settings"></span></div>					
 					</div>
 				</div>
 				<div class="row top-pad">
 					<div class="col-md-4">
 						<div class="features">
-							<h3 class="wow fadeInDown"><span class="common-icon-style ti-user"></span>Social Integration</h3>
-							<p class="wow fadeIn">Social media platform to allow user to sign up, comment or share posts to remain engaged with our application.</p>
+							<h3 class="wow fadeInDown"><span class="common-icon-style ti-user"></span>Authentication &amp; User Profiles</h3>
+							<p class="wow fadeIn">Custom logins and user profiles using one or many of the following common authentication providers: <br />Facebook | Twitter | Google | Microsoft | Azure Active Directory | etc.</p>
 						</div>	
 
 						<div class="features">
-							<h3 class="wow fadeInDown"><span class="common-icon-style ti-star"></span>Customization</h3>
-							<p class="wow fadeIn">Allow users to get a strong hand on the privacy settings and alter the application to the way they like it.</p>
+							<h3 class="wow fadeInDown"><span class="common-icon-style ti-star"></span>Custom Design</h3>
+							<p class="wow fadeIn">Any design you can imagine is possible, if you have trouble our designers will guide along the way.</p>
 						</div>	
 
 						<div class="features">
-							<h3 class="wow fadeInDown"><span class="common-icon-style ti-mouse-alt"></span>Eliminate Clicks</h3>
-							<p class="wow fadeIn">Keen about eliminating unnecessary click or tap and ask minimum amount of information from the user.</p>
+							<h3 class="wow fadeInDown"><span class="common-icon-style ti-mouse-alt"></span>Offline Support</h3>
+							<p class="wow fadeIn">Is it common your app will be used in dead zones or with limited connectivity? Offline support enables your app to work no matter where you are and sync back once you are back online. </p>
 						</div>						
 					</div>
 					<div class="col-md-4 wow bounceIn" data-wow-duration="1s" data-wow-delay=".2s">
@@ -281,18 +281,18 @@
 					</div>
 					<div class="col-md-4">
 						<div class="features">
-							<h3 class="wow fadeInDown"><span class="common-icon-style ti-pie-chart"></span>Analytics</h3>
-							<p class="wow fadeIn">Track and analyze user experience is important for our app to encourage better updates and functionality.</p>
+							<h3 class="wow fadeInDown"><span class="common-icon-style ti-pie-chart"></span>Reporting and Charting</h3>
+							<p class="wow fadeIn">Custom report generation and charts at the palm of your hand.</p>
 						</div>	
 
 						<div class="features">
-							<h3 class="wow fadeInDown"><span class="common-icon-style ti-reload"></span>Relevancy</h3>
-							<p class="wow fadeIn">Our app focus on publishing information that is relevant and adds value to the user’s experience. </p>
+							<h3 class="wow fadeInDown"><span class="common-icon-style ti-reload"></span>Real-Time Data</h3>
+							<p class="wow fadeIn">Creating a custom online database allows us to create powerful data rich apps.</p>
 						</div>	
 
 						<div class="features">
-							<h3 class="wow fadeInDown"><span class="common-icon-style ti-comment-alt"></span>Feedback</h3>
-							<p class="wow fadeIn">Easiest way to get suggestions and criticism from the users which will help to shape the future of our app.</p>
+							<h3 class="wow fadeInDown"><span class="common-icon-style ti-comment-alt"></span>Instant Message</h3>
+							<p class="wow fadeIn">Adding an instant message feature into the app allows people to communicate easily in the context of your app.</p>
 						</div>								
 					</div>
 				</div>
@@ -334,17 +334,17 @@
 						<div class="col-md-6">
 
 							<div class="features">
-									<h3><span class="common-icon-style ti-check-box"></span>Application Cache</h3>
+									<h3><span class="common-icon-style ti-check-box"></span>Authentication &amp; User Profiles</h3>
 									<p>AppCore application cache is an alternative to a native app’s ability to be downloaded and stored on a device.</p>
 							</div>															
 
 							<div class="features">
-									<h3><span class="common-icon-style ti-check-box"></span>Local Storage</h3>
+									<h3><span class="common-icon-style ti-check-box"></span>Offline Support</h3>
 									<p>A standard system that retains local web app data (even when the browser is shut down) using a key/value system that works similarly to browser cookies.</p>
 							</div>		
 
 							<div class="features">
-									<h3><span class="common-icon-style ti-check-box"></span>Local Database</h3>
+									<h3><span class="common-icon-style ti-check-box"></span>Security</h3>
 									<p>Allows data to be indexed so that multiple properties can be queried quickly. This is only an HTML5 proposed standard at present.</p>
 							</div>		
 
