updated team members

--- a/index.html
+++ b/index.html
@@ -722,21 +722,22 @@
 					<div class="col-md-3 col-sm-6 text-center">
 						<!-- Team member 1 -->
 						<img src="assets/img/team/1.jpg" alt="team1" class="img-responsive center-block">
-						<h3>Mark Anderson</h3>
-						<p>Lead Developer</p>
+						<h3>Andrew Hoefling</h3>
+						<p>Xamarin Architect/Owner</p>
 						<ul class="list-inline margin-top-bottom-15">
-							<li><a href="" target="_blank"><span class="social ti-facebook"></span></a></li>
-							<li><a href="" target="_blank"><span class="social ti-twitter-alt"></span></a></li>
-							<li><a href="" target="_blank"><span class="social ti-vimeo-alt"></span></a></li>
-							<li><a href="" target="_blank"><span class="social ti-tumblr-alt"></span></a></li>
+							<li><a href="https://github.com/ahoefling" target="_blank"><span class="social ti-github"></span></a></li>
+							<li><a href="https://stackoverflow.com/users/6040263/andrew-hoefling" target="_blank"><span class="social ti-stack-overflow"></span></a></li>
+							<li><a href="http://www.andrewhoefling.com/" target="_blank"><span class="social ti-rss"></span></a></li>
+							<li><a href="https://twitter.com/andrew_hoefling" target="_blank"><span class="social ti-twitter-alt"></span></a></li>
+							<li><a href="https://www.linkedin.com/in/andrew-hoefling-38324912/" target="_blank"><span class="social ti-linkedin"></span></a></li>
 						</ul>
 						<!-- End Team member -->	
 					</div>
 					<div class="col-md-3 col-sm-6 text-center">
 						<!-- Team member 2 -->
 						<img src="assets/img/team/2.jpg" alt="team2" class="img-responsive center-block">
-						<h3>Dorothy Marsh</h3>
-						<p>UI/UX Designer</p>
+						<h3>Will Smith</h3>
+						<p>Mobile Developer</p>
 						<ul class="list-inline margin-top-bottom-15">
 							<li><a href="" target="_blank"><span class="social ti-facebook"></span></a></li>
 							<li><a href="" target="_blank"><span class="social ti-twitter-alt"></span></a></li>
@@ -748,8 +749,8 @@
 					<div class="col-md-3 col-sm-6 text-center">
 						<!-- Team member 3 -->
 						<img src="assets/img/team/3.jpg" alt="team3" class="img-responsive center-block">
-						<h3>Richard Trodden</h3>
-						<p>Project Manager</p>
+						<h3>Trent Peterson</h3>
+						<p>UI/UX Designer</p>
 						<ul class="list-inline margin-top-bottom-15">
 							<li><a href="" target="_blank"><span class="social ti-facebook"></span></a></li>
 							<li><a href="" target="_blank"><span class="social ti-twitter-alt"></span></a></li>
@@ -764,9 +765,9 @@
 						<h3>Tricia John</h3>
 						<p>Business Analyst</p>
 						<ul class="list-inline margin-top-bottom-15">
-							<li><a href="" target="_blank"><span class="social ti-facebook"></span></a></li>
+							<li><a href="" target="_blank"><span class="social ti-linkedin"></span></a></li>
 							<li><a href="" target="_blank"><span class="social ti-twitter-alt"></span></a></li>
-							<li><a href="" target="_blank"><span class="social ti-vimeo-alt"></span></a></li>
+							<li><a href="" target="_blank"><span class="social ti-stack-alt"></span></a></li>
 							<li><a href="" target="_blank"><span class="social ti-tumblr-alt"></span></a></li>
 						</ul>
 						<!-- End Team member -->
