Updated team section

--- a/index.html
+++ b/index.html
@@ -739,35 +739,35 @@
 						<h3>Will Smith</h3>
 						<p>Mobile Developer</p>
 						<ul class="list-inline margin-top-bottom-15">
-							<li><a href="" target="_blank"><span class="social ti-facebook"></span></a></li>
+							<li><a href="" target="_blank"><span class="social ti-github"></span></a></li>
 							<li><a href="" target="_blank"><span class="social ti-twitter-alt"></span></a></li>
-							<li><a href="" target="_blank"><span class="social ti-vimeo-alt"></span></a></li>
-							<li><a href="" target="_blank"><span class="social ti-tumblr-alt"></span></a></li>
+							<li><a href="" target="_blank"><span class="social ti-linkedin"></span></a></li>
 						</ul>
 						<!-- End Team member -->
 					</div>
 					<div class="col-md-3 col-sm-6 text-center">
 						<!-- Team member 3 -->
-						<img src="assets/img/team/3.jpg" alt="team3" class="img-responsive center-block">
-						<h3>Trent Peterson</h3>
-						<p>UI/UX Designer</p>
+						<!-- <img src="assets/img/team/3.jpg" alt="team3" class="img-responsive center-block"> -->
+						<img src="http://via.placeholder.com/145x145" alt="team3" class="img-responsive center-block">						
+						<h3>Flavio Santini</h3>
+						<p>Backend Developer</p>
 						<ul class="list-inline margin-top-bottom-15">
-							<li><a href="" target="_blank"><span class="social ti-facebook"></span></a></li>
+							<li><a href="" target="_blank"><span class="social ti-github"></span></a></li>
 							<li><a href="" target="_blank"><span class="social ti-twitter-alt"></span></a></li>
-							<li><a href="" target="_blank"><span class="social ti-vimeo-alt"></span></a></li>
-							<li><a href="" target="_blank"><span class="social ti-tumblr-alt"></span></a></li>
+							<li><a href="" target="_blank"><span class="social ti-linkedin"></span></a></li>
 						</ul>
 						<!-- End Team member -->
 					</div>
 					<div class="col-md-3 col-sm-6 text-center">
 						<!-- Team member 4 -->
-						<img src="assets/img/team/4.jpg" alt="team4" class="img-responsive center-block">
-						<h3>Tricia John</h3>
+						<!-- <img src="assets/img/team/4.jpg" alt="team4" class="img-responsive center-block"> -->
+						<img src="http://via.placeholder.com/145x145" alt="team4" class="img-responsive center-block">
+						<h3>Steve Henn</h3>
 						<p>Business Analyst</p>
 						<ul class="list-inline margin-top-bottom-15">
 							<li><a href="" target="_blank"><span class="social ti-linkedin"></span></a></li>
 							<li><a href="" target="_blank"><span class="social ti-twitter-alt"></span></a></li>
-							<li><a href="" target="_blank"><span class="social ti-stack-alt"></span></a></li>
+							<li><a href="" target="_blank"><span class="social ti-stack-overflow"></span></a></li>
 							<li><a href="" target="_blank"><span class="social ti-tumblr-alt"></span></a></li>
 						</ul>
 						<!-- End Team member -->
