--- a/index.html
+++ b/index.html
@@ -788,10 +788,10 @@
 				</div>
 	    		<div class="row top-pad">
 	    			<div class="col-md-4 wow fadeIn" data-wow-duration="1s" data-wow-delay=".2s">
-	    				<h3>Company Name</h3>
-	    				<p><span class="common-icon-style ti-location-pin"></span>01 Street, C1T2 Earth</p>
-	    				<p><span class="common-icon-style ti-mobile"></span>0123 456 8080</p>
-	    				<p><span class="common-icon-style ti-email"></span>info@domain.com</p>
+	    				<h3>Rochester Xamarin</h3>
+	    				<p><span class="common-icon-style ti-location-pin"></span>30 Mulberry St, Rochester, NY, USA</p>
+	    				<p><span class="common-icon-style ti-mobile"></span>585 340 7163</p>
+	    				<p><span class="common-icon-style ti-email"></span>info@rochesterxamarin.com</p>
 	    			</div>
 	    			<div class="col-md-8 wow fadeIn" data-wow-duration="1s" data-wow-delay=".2s">
 	    				<form class="form-horizontal" method="post" action="email.php">
@@ -819,7 +819,7 @@
 		<!-- End Contact -->
 
 		<!-- Footer -->
-		<footer>
+		<!-- <footer>
 			<div class="container">
 				<div class="row text-center">
 					<div class="col-md-12">
@@ -834,7 +834,7 @@
 					</div>
 				</div>
 			</div>
-		</footer>
+		</footer> -->
 		<!-- End Footer -->		
 
 		<!-- Scroll Top -->
