Updated pricing table

--- a/index.html
+++ b/index.html
@@ -630,14 +630,15 @@
 						<!-- Pricing Table 1 -->
 						<div class="pricing-table wow fadeIn" data-wow-duration="2s" data-wow-delay=".1s">
 							<div class="pricing-head">
-								<h3>Standard</h3>
-								<h4>&dollar;150<small>/Month</small></h4>								
+								<h3>Professional</h3>
+								<!-- <h4>&dollar;150<small>/Month</small></h4> -->
 							</div>
 							<ul class="pricing-list">
-								<li>Free setup</li>
-								<li>Limited Bandwidth</li>
-								<li>1Gb Storage</li>
-								<li>Enhanced Security</li>
+								<li>UI/UX Design</li>
+								<li>Limited Prototype</li>
+								<li>Delivered Product</li>
+								<li>&nbsp;</li>
+								<li>&nbsp;</li>
 							</ul>
 							<a href="#" target="_blank" class="btn custom-button-2 center-block"><span class="signup ti-pencil"></span>Sign up</a>							
 						</div>
@@ -649,14 +650,15 @@
 						<!-- Pricing Table 2 -->
 						<div class="pricing-table wow fadeIn" data-wow-duration="2s" data-wow-delay=".3s">
 							<div class="pricing-head">
-								<h3>Professional</h3>
-								<h4>&dollar;250<small>/Month</small></h4>								
+								<h3>Business</h3>
+								<!-- <h4>&dollar;250<small>/Month</small></h4> -->
 							</div>
 							<ul class="pricing-list">
-								<li>Free setup</li>
-								<li>Limited Bandwidth</li>
-								<li>1Gb Storage</li>
-								<li>Enhanced Security</li>
+								<li>UI/UX Design</li>
+								<li>Full Prototype</li>
+								<li>Delivered Product</li>
+								<li>1-Click Deploys to Store</li>
+								<li>&nbsp;</li>
 							</ul>
 							<a href="#" target="_blank" class="btn custom-button-2 center-block"><span class="signup ti-pencil"></span>Sign up</a>								
 						</div>
@@ -669,14 +671,15 @@
 						<div class="pricing-table wow fadeIn" data-wow-duration="2s" data-wow-delay=".5s">
 							<div class="pricing-head">
 								<img src="assets/img/ribbon.png" alt="ribbon" class="img-responsive ribbon">
-								<h3>Business</h3>
-								<h4>&dollar;300<small>/Month</small></h4>								
+								<h3>Enterprise</h3>
+								<!-- <h4>&dollar;300<small>/Month</small></h4> -->
 							</div>
 							<ul class="pricing-list">
-								<li>Free setup</li>
-								<li>Unlimited Bandwidth</li>
-								<li>5Gb Storage</li>
-								<li>Enhanced Security</li>
+								<li>UI/UX Design</li>
+								<li>Full Prototype</li>
+								<li>Delivered Product</li>
+								<li>1-Click Deploys to Store</li>
+								<li>6 Months of Support</li>
 							</ul>
 							<a href="#" target="_blank" class="btn custom-button-2 center-block"><span class="signup ti-pencil"></span>Sign up</a>								
 						</div>
@@ -688,14 +691,14 @@
 						<!-- Pricing Table 4 -->
 						<div class="pricing-table wow fadeIn" data-wow-duration="2s" data-wow-delay=".7s">
 							<div class="pricing-head">
-								<h3>Enterprise</h3>
-								<h4>&dollar;450<small>/Month</small></h4>								
+								<h3>Support</h3>
 							</div>
 							<ul class="pricing-list">
-								<li>Free setup</li>
-								<li>Unlimited Bandwidth</li>
-								<li>2Gb Storage</li>
-								<li>Enhanced Security</li>
+								<li>Customer Portal</li>
+								<li>Breakfix Support</li>
+								<li>Bug Fixes</li>
+								<li>Minor Enhancements</li>
+								<li>System Upgrades</li>
 							</ul>
 							<a href="#" target="_blank" class="btn custom-button-2 center-block"><span class="signup ti-pencil"></span>Sign up</a>
 						</div>
