Updated pricing to packages

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 		                	<a class="page-scroll" href="#reviews">Reviews</a>
 		              	</li>
 		              	<li>
-		                	<a class="page-scroll" href="#pricing">Pricing</a>
+		                	<a class="page-scroll" href="#packages">Packages</a>
 		              	</li>	
 		              	<li>
 		                	<a class="page-scroll" href="#team">Team</a>
@@ -502,43 +502,6 @@
 		</section>
 		<!-- End Screenshots -->
 
-		<!-- Newsletter -->
-		<section id="newsletter">
-			<div class="container">
-				<div class="row text-center">
-					<div class="col-md-12">
-						<h2 class="headline wow fadeInDown">Newsletter<span class="dot">.</span></h2>
-						<div class="custom-style"><span class="ti-email"></span></div>				
-					</div>
-				</div>
-				<div class="row top-pad">
-		    		<div class="col-md-8 col-md-offset-2">
-		    			<form id="subscribe" class="form-horizontal">
-							<div class="form-group">
-								<div class="col-md-8 col-sm-8 newsletter wow fadeIn" data-wow-duration="1s" data-wow-delay=".1s">
-									<input class="form-control" type="email" id="address" placeholder="Email Address" required="required">
-								</div>
-								<div class="col-md-4 col-sm-4 text-center wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s">
-									<button type="submit" class="btn custom-button-1"><span class="subscribe ti-mouse"></span>Subscribe</button>
-								</div>
-							</div>
-						</form>	    				
-		    		</div>
-		    	</div>
-		    	<div class="row">	
-		    		<div class="col-md-4 col-md-push-4 text-center">
-			  			<p class="subscribe-error"></p>			    			    			
-		    		</div>		
-		    	</div>
-		    	<div class="row">
-		    		<div class="col-md-8 col-md-push-2 text-center">
-	    				<p class="subscribe-success"></p>		    			
-		    		</div>	
-				</div>
-			</div>
-		</section>
-		<!-- End Newsletter -->	
-
 		<!-- Reviews -->
 		<section id="reviews">
 			<div class="container">
@@ -614,8 +577,8 @@
 			</div>
 		</section>
 
-		<!-- Pricing -->
-		<section id="pricing">
+		<!-- Packages -->
+		<section id="packages">
 			<div class="container">
 				<div class="row text-center">
 					<div class="col-md-12">
