Chaged screenshots to case studies

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 		                	<a class="page-scroll" href="#process">Process</a>
 		              	</li>
 		              	<li>
-		                	<a class="page-scroll" href="#screenshots">Screenshots</a>
-		              	</li>		              	
+		                	<a class="page-scroll" href="#case-studies">Case Studies</a>
+						</li>		              	
 		              	<li>
 		                	<a class="page-scroll" href="#reviews">Reviews</a>
 		              	</li>
@@ -410,12 +410,12 @@
 		</section>
 		<!-- End Download -->	
 
-		<!-- Screenshots -->
-		<section id="screenshots">
+		<!-- Case-Studies -->
+		<section id="case-studies">
 			<div class="container">
 				<div class="row text-center">
 					<div class="col-md-12">
-						<h2 class="headline wow fadeInDown">Sneak Peek<span class="dot">.</span></h2>
+						<h2 class="headline wow fadeInDown">Case Studies<span class="dot">.</span></h2>
 						<div class="custom-style"><span class="ti-palette"></span></div>
 					</div>
 				</div>
@@ -500,7 +500,7 @@
 				</div>												
 			</div>
 		</section>
-		<!-- End Screenshots -->
+		<!-- End Case-Studies -->
 
 		<!-- Reviews -->
 		<section id="reviews">
