Updated store links

--- a/index.html
+++ b/index.html
@@ -385,24 +385,29 @@
 			<div class="container">
 				<div class="row text-center">
 					<div class="col-md-12">
-						<h2 class="headline wow fadeInDown">Get Your App<span class="dot">.</span></h2>
+						<h2 class="headline wow fadeInDown">Get Your App In The Store<span class="dot">.</span></h2>
 						<div class="custom-style"><span class="ti-mobile"></span></div>
 					</div>
 				</div>
 				<div class="row top-margin">
-					<div class="col-md-4 col-sm-4 text-center wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s">
+					<div class="col-md-3 col-sm-3 text-center wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s">
 						<div class="download-wrap">
-							<a href="#" target="_blank" class="btn download"><span class="download-icon ti-apple"></span>App Store<span class="click ti-arrow-right"></span></a>
+							<a href="#download" class="btn download"><span class="download-icon ti-apple"></span>App Store<span class="click ti-arrow-right"></span></a>
 						</div>	
 					</div>
-					<div class="col-md-4 col-sm-4 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
+					<div class="col-md-3 col-sm-3 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
 						<div class="download-wrap">
-							<a href="#" target="_blank" class="btn download"><span class="download-icon ti-android"></span>Play Store<span class="click ti-arrow-right"></span></a>
+							<a href="#download" class="btn download"><span class="download-icon ti-android"></span>Play Store<span class="click ti-arrow-right"></span></a>
 						</div>	
 					</div>
-					<div class="col-md-4 col-sm-4 text-center wow fadeInDown" data-wow-duration="1s" data-wow-delay=".3s">
+					<div class="col-md-3 col-sm-3 text-center wow fadeInDown" data-wow-duration="1s" data-wow-delay=".3s">
 						<div class="download-wrap">
-							<a href="#" target="_blank" class="btn download"><span class="download-icon ti-microsoft-alt"></span>Windows<span class="click ti-arrow-right"></span></a>
+							<a href="#download" class="btn download"><span class="download-icon ti-microsoft-alt"></span>Windows<span class="click ti-arrow-right"></span></a>
+						</div>	
+					</div>
+					<div class="col-md-3 col-sm-3 text-center wow fadeInDown" data-wow-duration="1s" data-wow-delay=".3s">
+						<div class="download-wrap">
+							<a href="#download" class="btn download"><span class="download-icon ti-download"></span>Ad-Hoc<span class="click ti-arrow-right"></span></a>
 						</div>	
 					</div>
 				</div>
