--- a/index.html
+++ b/index.html
@@ -72,24 +72,26 @@
 							<div class="row store-margin">							
 								<div class="col-md-6 col-md-offset-3">
 				
-									<div class="col-md-4 col-sm-4 col-xs-4 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".1s">
-										<a href="#" target="_blank">
+									<div class="col-md-3 col-sm-3 col-xs-3 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".1s">
+										<a href="#">
 											<span class="custom-store ti-apple"></span>
 										</a>
 									</div>
-
-									<div class="col-md-4 col-sm-4 col-xs-4 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-										<a href="#" target="_blank">
+									<div class="col-md-3 col-sm-3 col-xs-3 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+										<a href="#">
 											<span class="custom-store ti-android"></span>
 										</a>
 									</div>
-
-									<div class="col-md-4 col-sm-4 col-xs-4 text-center wow fadeInUp"  data-wow-duration="1s" data-wow-delay=".5s">
-										<a href="#" target="_blank">
+									<div class="col-md-3 col-sm-3 col-xs-3 text-center wow fadeInUp"  data-wow-duration="1s" data-wow-delay=".5s">
+										<a href="#">
 											<span class="custom-store ti-microsoft-alt"></span>
 										</a>
 									</div>
-
+									<div class="col-md-3 col-sm-3 col-xs-3 text-center wow fadeInUp"  data-wow-duration="1s" data-wow-delay=".5s">
+										<a href="#">
+											<span class="custom-store ti-download"></span>
+										</a>
+									</div>
 								</div>
 							</div>
 
