removed watch video button

--- a/index.html
+++ b/index.html
@@ -306,17 +306,17 @@
 		<section id="video">
 			<div class="container">
 				<div class="row text-center">
-					<div class="col-md-12">
+					<!-- <div class="col-md-12">
 						<h2 class="wow fadeInDown">Watch Video<span class="dot">.</span></h2>
-					</div>
+					</div> -->
 				</div>
-				<div class="row text-center">
+				<!-- <div class="row text-center">
 					<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
 						<div class="app-video" data-mfp-src="https://vimeo.com/106557317">
 							<span class="play-icon ti-control-play"></span>
 						</div>
 					</div>
-				</div>				
+				</div>				 -->
 			</div>	
 		</section>
 		<!-- End Video -->
