features and more features

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 				<div class="row top-pad">
 					<div class="col-md-4">
 						<div class="features">
-							<h3 class="wow fadeInDown"><span class="common-icon-style ti-user"></span>Authentication &amp; User Profiles</h3>
+							<h3 class="wow fadeInDown"><span class="common-icon-style ti-user"></span>User Profiles</h3>
 							<p class="wow fadeIn">Custom logins and user profiles using one or many of the following common authentication providers: <br />Facebook | Twitter | Google | Microsoft | Azure Active Directory | etc.</p>
 						</div>	
 
@@ -262,8 +262,8 @@
 						</div>	
 
 						<div class="features">
-							<h3 class="wow fadeInDown"><span class="common-icon-style ti-mouse-alt"></span>Offline Support</h3>
-							<p class="wow fadeIn">Is it common your app will be used in dead zones or with limited connectivity? Offline support enables your app to work no matter where you are and sync back once you are back online. </p>
+							<h3 class="wow fadeInDown"><span class="common-icon-style ti-mouse-alt"></span>Usability</h3>
+							<p class="wow fadeIn">Enterprise apps can get copmlicated very quickly, which makes them not very useful if the users can't use them. Our apps take all of this complex data into the design so the users can easily navigate the data and perform useful tasks with the data.</p>
 						</div>						
 					</div>
 					<div class="col-md-4 wow bounceIn" data-wow-duration="1s" data-wow-delay=".2s">
@@ -336,45 +336,34 @@
 						<div class="col-md-6">
 
 							<div class="features">
-									<h3><span class="common-icon-style ti-check-box"></span>Authentication &amp; User Profiles</h3>
-									<p>AppCore application cache is an alternative to a native app’s ability to be downloaded and stored on a device.</p>
+								<h3><span class="common-icon-style ti-check-box"></span>Authentication &amp; User Profiles</h3>
+								<p>Authentication systems allow users to log in to the app and gives the app ability to assign different user roles. Any complex app will require some level of Authentication and Authorization systems.</p>
 							</div>															
+							
+							<div class="features">
+								<h3><span class="common-icon-style ti-check-box"></span>Web Services</h3>
+								<p>A RESTful Web Service is crucial in making a powerful distributed app that retrieves and stores large amount of data in a database.</p>
+							</div>
 
 							<div class="features">
-									<h3><span class="common-icon-style ti-check-box"></span>Offline Support</h3>
-									<p>A standard system that retains local web app data (even when the browser is shut down) using a key/value system that works similarly to browser cookies.</p>
+								<h3><span class="common-icon-style ti-check-box"></span>Database</h3>
+								<p>Using a local or distributed database allows an app to store complex data objects.</p>
+							</div>
+
+							<div class="features">
+								<h3><span class="common-icon-style ti-check-box"></span>Offline Support</h3>
+								<p>Is it common your app will be used in dead zones or with limited connectivity? Offline support enables your app to work no matter where you are and sync back once you are back online.</p>
 							</div>		
 
 							<div class="features">
-									<h3><span class="common-icon-style ti-check-box"></span>Security</h3>
-									<p>Allows data to be indexed so that multiple properties can be queried quickly. This is only an HTML5 proposed standard at present.</p>
+								<h3><span class="common-icon-style ti-check-box"></span>Security</h3>
+								<p>When good security practices are followed, the users will never know because it never becomes a problem.</p>
 							</div>		
 
 						</div>					
 						<div class="col-md-6">
 							<img src="assets/img/phone03.jpg" alt="phone" class="img-responsive center-block wow fadeIn" data-wow-duration="2s" data-wow-delay=".2s">
 						</div>						
-					</div>					
-					<div class="item">
-						<div class="col-md-6">
-							<div class="features">
-									<h3><span class="common-icon-style ti-check-box"></span>Application Cache</h3>
-									<p>AppCore application cache is an alternative to a native app’s ability to be downloaded and stored on a device.</p>
-							</div>															
-
-							<div class="features">
-									<h3><span class="common-icon-style ti-check-box"></span>Local Storage</h3>
-									<p>A standard system that retains local web app data (even when the browser is shut down) using a key/value system that works similarly to browser cookies.</p>
-							</div>		
-
-							<div class="features">
-									<h3><span class="common-icon-style ti-check-box"></span>Local Database</h3>
-									<p>Allows data to be indexed so that multiple properties can be queried quickly. This is only an HTML5 proposed standard at present.</p>
-							</div>	
-						</div>
-						<div class="col-md-6">
-							<img src="assets/img/phone04.jpg" alt="phone" class="img-responsive center-block">
-						</div>
 					</div>
 						
 				</div>
