--- a/index.html
+++ b/index.html
@@ -807,7 +807,8 @@
 	    <script src="assets/js/jquery.textrotator.min.js"></script>
 
 	    <!-- Custom JavaScript -->
-	    <script src="assets/js/custom.js"></script>	
+		<script src="assets/js/custom.js"></script>	
+		<script type='text/javascript' data-cfasync='false'>window.purechatApi = { l: [], t: [], on: function () { this.l.push(arguments); } }; (function () { var done = false; var script = document.createElement('script'); script.async = true; script.type = 'text/javascript'; script.src = 'https://app.purechat.com/VisitorWidget/WidgetScript'; document.getElementsByTagName('HEAD').item(0).appendChild(script); script.onreadystatechange = script.onload = function (e) { if (!done && (!this.readyState || this.readyState == 'loaded' || this.readyState == 'complete')) { var w = new PCWidget({c: '1e60f1fc-5d7a-4fda-ac9a-84f1ab71b398', f: true }); done = true; } }; })();</script>
 
 	</body>
 
