Added social links for will smith

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 		                	<a class="page-scroll" href="#team">Team</a>
 		              	</li>		              	              	              	
 		              	<li>
-		                	<a class="page-scroll" href="#contact">Contact</a>
+		                	<a class="page-scroll" href="#contact">Schedule Meeting</a>
 		              	</li>		              			              
 		            </ul>
 		          </div>
@@ -690,9 +690,9 @@
 						<h3>Will Smith</h3>
 						<p>Mobile Developer</p>
 						<ul class="list-inline margin-top-bottom-15">
-							<li><a href="" target="_blank"><span class="social ti-github"></span></a></li>
-							<li><a href="" target="_blank"><span class="social ti-twitter-alt"></span></a></li>
-							<li><a href="" target="_blank"><span class="social ti-linkedin"></span></a></li>
+							<li><a href="https://github.com/AppsmithsLLC" target="_blank"><span class="social ti-github"></span></a></li>
+							<li><a href="https://twitter.com/swsmith147" target="_blank"><span class="social ti-twitter-alt"></span></a></li>
+							<li><a href="https://www.linkedin.com/in/swilliamsmith" target="_blank"><span class="social ti-linkedin"></span></a></li>
 						</ul>
 						<!-- End Team member -->
 					</div>
