Added twitter for flavio

--- a/index.html
+++ b/index.html
@@ -703,9 +703,7 @@
 						<h3>Flavio Santini</h3>
 						<p>Backend Developer</p>
 						<ul class="list-inline margin-top-bottom-15">
-							<li><a href="" target="_blank"><span class="social ti-github"></span></a></li>
-							<li><a href="" target="_blank"><span class="social ti-twitter-alt"></span></a></li>
-							<li><a href="" target="_blank"><span class="social ti-linkedin"></span></a></li>
+							<li><a href="https://twitter.com/flaviosantini" target="_blank"><span class="social ti-twitter-alt"></span></a></li>
 						</ul>
 						<!-- End Team member -->
 					</div>
