Updating links for packages to route to the get in touch at the bottom of the page

--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
 								<li>&nbsp;</li>
 								<li>&nbsp;</li>
 							</ul>
-							<a href="#" target="_blank" class="btn custom-button-2 center-block"><span class="signup ti-pencil"></span>Sign up</a>							
+							<a href="#contact" class="btn custom-button-2 center-block"><span class="signup ti-pencil"></span>Schedule Meeting</a>							
 						</div>
 						<!-- End Pricing Table -->
 					</div>
@@ -608,7 +608,7 @@
 								<li>1-Click Deploys to Store</li>
 								<li>&nbsp;</li>
 							</ul>
-							<a href="#" target="_blank" class="btn custom-button-2 center-block"><span class="signup ti-pencil"></span>Sign up</a>								
+							<a href="#contact" class="btn custom-button-2 center-block"><span class="signup ti-pencil"></span>Schedule Meeting</a>								
 						</div>
 						<!-- End Pricing Table -->					
 					</div>
@@ -629,7 +629,7 @@
 								<li>1-Click Deploys to Store</li>
 								<li>6 Months of Support</li>
 							</ul>
-							<a href="#" target="_blank" class="btn custom-button-2 center-block"><span class="signup ti-pencil"></span>Sign up</a>								
+							<a href="#contact" class="btn custom-button-2 center-block"><span class="signup ti-pencil"></span>Schedule Meeting</a>								
 						</div>
 						<!-- End Pricing Table -->					
 					</div>
@@ -648,7 +648,7 @@
 								<li>Minor Enhancements</li>
 								<li>System Upgrades</li>
 							</ul>
-							<a href="#" target="_blank" class="btn custom-button-2 center-block"><span class="signup ti-pencil"></span>Sign up</a>
+							<a href="#contact" class="btn custom-button-2 center-block"><span class="signup ti-pencil"></span>Schedule Meeting</a>
 						</div>
 						<!-- End Pricing Table -->						
 					</div>
