--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
 					<div class="col-md-3 col-sm-6 text-center">
 						<!-- Team member 3 -->
 						<!-- <img src="assets/img/team/3.jpg" alt="team3" class="img-responsive center-block"> -->
-						<img src="http://via.placeholder.com/145x145" alt="team3" class="img-responsive center-block">						
+						<img src="assets/img/team/3.jpg" alt="team3" class="img-responsive center-block">						
 						<h3>Flavio Santini</h3>
 						<p>Backend Developer</p>
 						<ul class="list-inline margin-top-bottom-15">
@@ -710,7 +710,7 @@
 					<div class="col-md-3 col-sm-6 text-center">
 						<!-- Team member 4 -->
 						<!-- <img src="assets/img/team/4.jpg" alt="team4" class="img-responsive center-block"> -->
-						<img src="http://via.placeholder.com/145x145" alt="team4" class="img-responsive center-block">
+						<img src="assets/img/team/4.jpg" alt="team4" class="img-responsive center-block">
 						<h3>Steve Henn</h3>
 						<p>Business Analyst</p>
 						<ul class="list-inline margin-top-bottom-15">
