--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<!--[if lt IE 9]>
 	        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-	    <![endif]-->
+		<![endif]-->
 	</head>
 
 	<body id="page-top" class="index">
@@ -737,13 +737,14 @@
 				</div>
 	    		<div class="row top-pad">
 	    			<div class="col-md-4 wow fadeIn" data-wow-duration="1s" data-wow-delay=".2s">
-	    				<h3>Rochester Xamarin</h3>
+						<h3>Rochester Xamarin</h3>
+						<h5><a href="https://www.hoeflingsoftware.com/" target="_blank">Hoefling Software, LLC</a></h5>
 	    				<p><span class="common-icon-style ti-location-pin"></span>30 Mulberry St, Rochester, NY, USA</p>
 	    				<p><span class="common-icon-style ti-mobile"></span>585 340 7163</p>
 	    				<p><span class="common-icon-style ti-email"></span>info@rochesterxamarin.com</p>
 	    			</div>
 	    			<div class="col-md-8 wow fadeIn" data-wow-duration="1s" data-wow-delay=".2s">
-	    				<form class="form-horizontal" method="post" action="email.php">
+	    				<form class="form-horizontal" method="post" action="https://hoeflingsoftware-functions.azurewebsites.net/api/contact?code=wlVqjYX64Rny9iJm6uOdJdpd11fL/WOX/dxEQYkaD7sjr6LewWAyog==">
 							<div class="form-group">
 								<div class="col-md-12 wow fadeIn" data-wow-duration="1s" data-wow-delay=".3s">	
 
@@ -753,11 +754,11 @@
 									<p class="confirmation send-error"><span class="common-icon-style ti-alert"></span>There is a problem sending email ...</p>				
 
 									<input class="form-control" type="text" name="name" placeholder="Name" required="required">
-									<input class="form-control" type="text" name="subject" placeholder="Subject" required="required">
+									<input class="form-control" type="text" name="company" placeholder="Company" >
+									<input class="form-control" type="text" name="phone" placeholder="Phone" >
 									<input class="form-control" type="email" name="email" placeholder="Email" required="required">
 									<textarea class="form-control" name="message" rows="4" placeholder="Message" required="required"></textarea>
 									<button type="submit" class="btn custom-button-3">Submit</button>
-
 								</div>								
 							</div>
 						</form>	     				
@@ -802,12 +803,11 @@
 	    <script src="assets/js/jquery.ajaxchimp.min.js"></script>	      
 	    <script src="assets/js/jquery.backstretch.min.js"></script>
 	    <script src="assets/js/wow.min.js"></script>
-	    <script src="assets/js/jquery.textrotator.min.js"></script>
+		<script src="assets/js/jquery.textrotator.min.js"></script>
+		<script src="assets/js/jquery.serializejson.min.js"></script>
 
 	    <!-- Custom JavaScript -->
 		<script src="assets/js/custom.js"></script>	
 		<script type='text/javascript' data-cfasync='false'>window.purechatApi = { l: [], t: [], on: function () { this.l.push(arguments); } }; (function () { var done = false; var script = document.createElement('script'); script.async = true; script.type = 'text/javascript'; script.src = 'https://app.purechat.com/VisitorWidget/WidgetScript'; document.getElementsByTagName('HEAD').item(0).appendChild(script); script.onreadystatechange = script.onload = function (e) { if (!done && (!this.readyState || this.readyState == 'loaded' || this.readyState == 'complete')) { var w = new PCWidget({c: '1e60f1fc-5d7a-4fda-ac9a-84f1ab71b398', f: true }); done = true; } }; })();</script>
-
 	</body>
-
 </html>	
