Updating email address

--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
 						<h5><a href="https://www.hoeflingsoftware.com/" target="_blank">Hoefling Software, LLC</a></h5>
 	    				<p><span class="common-icon-style ti-location-pin"></span>30 Mulberry St, Rochester, NY, USA</p>
 	    				<p><span class="common-icon-style ti-mobile"></span>585 340 7163</p>
-	    				<p><span class="common-icon-style ti-email"></span>info@rochesterxamarin.com</p>
+	    				<p><span class="common-icon-style ti-email"></span>andrew@hoeflingsoftware.com</p>
 	    			</div>
 	    			<div class="col-md-8 wow fadeIn" data-wow-duration="1s" data-wow-delay=".2s">
 	    				<form class="form-horizontal" method="post" action="https://hoeflingsoftware-functions.azurewebsites.net/api/contact?code=wlVqjYX64Rny9iJm6uOdJdpd11fL/WOX/dxEQYkaD7sjr6LewWAyog==">
